--- a/uno.html
+++ b/uno.html
@@ -934,7 +934,7 @@
             </div>
             <div class="editable-style text-element silex-id-1439555806441-85" data-silex-type="text" data-silex-id="silex-id-1439555806441-85">
                 <div class="silex-element-content normal">
-                    <h2 style="text-align: center;" class="heading2">A free tool</h2>
+                    <h2 style="text-align: center;" class="heading2">Escríbenos</h2>
                     <p style="text-align: center;" class="normal">This open source CMS can be use by everyone, free of charge.</p>
                 </div>
             </div>
@@ -945,13 +945,13 @@
 
             <div class="editable-style text-element silex-id-1439555806030-81" data-silex-type="text" data-silex-id="silex-id-1439555806030-81">
                 <div class="silex-element-content normal">
-                    <h2 style="text-align: center;" class="heading2">Discover our community<br></h2>
+                    <h2 style="text-align: center;" class="heading2">Redes y Networking<br></h2>
                     <p style="text-align: center;" class="normal">Developers, Designers and users create a community. They help themselves always with goodwill and happiness</p>
                 </div>
             </div>
             <div class="editable-style text-element silex-id-1439555805927-80" data-silex-type="text" data-silex-id="silex-id-1439555805927-80">
                 <div class="silex-element-content normal">
-                    <h2 style="text-align: center;" class="heading2">Grow up the tool<br></h2>
+                    <h2 style="text-align: center;" class="heading2">Mantente al tanto<br></h2>
                     <p style="text-align: center;" class="normal">Thanks to all the people, the tool is always in progress for a best rendering day after day</p>
                 </div>
             </div>
